Refactoring for aligment with profiles.